# my-rust-service

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/middleware/: logger.rs
src/services/: auth.rs
