[package]
name = "service-1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
http-body-util = "0.1.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
axum-extra = { version = "*", features = ["typed-header"] }
